# Tetris-C

./: .gitignore  CMakeLists.txt  README.md  tetris
include/: board.h  constants.h  main.h  score.h  shapes.h  tetris.h  utilities.h
src/: board.c  main.c  score.c  tetris.c  utilities.c
